<resources>
    <string name="app_name">LingU</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Hanzi? Di LingU aja!</string>
    <string name="title_welcome_page">Selamat datang di LingU!</string>
    <string name="title_signup_page">Sign Up</string>
    <string name="username">Username atau Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Login</string>
    <string name="name">Nama</string>
    <string name="already_have_account">Sudah memiliki akun? Masuk</string>
    <string name="did_not_have_account">Belum Memiliki Akun? Daftar</string>
    <string name="message_main_page">Selamat Belajar di LingU.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="web_client_id">234486862438-8llu77t4a67e47otd20pad2gjhubkfou.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="meaning">Meaning</string>
    <string name="examples">Examples</string>
    <string name="character_details">Character Details</string>
    <string name="course_details">Course Details</string>
    <string name="all_courses">All Courses</string>
    <string name="back">Back</string>
    <string name="draw_on_red_canvas">Draw On Red Canvas</string>
    <string name="continue_progress">Continue Progress</string>
    <string name="masukkan_nama_modul">Masukkan Nama Modul</string>
    <string name="halo_username">Halo, Username</string>
    <string name="draw_on_white_canvas">Draw On White Canvas</string>
    <string name="result">Result</string>
    <string name="_100">/100</string>
    <string name="canvas">Canvas</string>
</resources>