<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.characters.DetailCharactersActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="73dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal3"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="285dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_hanzi"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        tools:text="上"
        android:gravity="center"
        android:textSize="128sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <View
            android:id="@+id/bottomBarReplacement"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/primary_red"
            app:layout_constraintBottom_toBottomOf="parent" />
        <TextView
            android:id="@+id/page_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_red"
            android:textColor="@color/primary_yellow"
            android:layout_marginTop="13dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/character_details"
            app:layout_anchor="@+id/bottomBarReplacement"
            app:layout_anchorGravity="center"
            android:layout_marginStart="22dp" />
        <Button
            android:id="@+id/backButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_red"
            android:focusable="true"
            android:textColor="@color/primary_yellow"
            android:layout_marginTop="13dp"
            android:clickable="true"
            android:text="@string/back"
            app:layout_anchor="@+id/bottomBarReplacement"
            app:layout_anchorGravity="start|top"
            android:layout_marginStart="22dp" />
        <Button
            android:id="@+id/backButton"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/primary_red"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/baseline_arrow_back_ios_24"
            app:layout_anchor="@+id/bottomBarReplacement"
            app:layout_anchorGravity="start|top"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp" />





        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/primary_red"
            android:clickable="true"
            android:foreground="@drawable/profile__vector"
            app:layout_anchor="@+id/bottomBarReplacement"
            app:layout_anchorGravity="end|top"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/tv_characters_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal3"
        tools:text="shàng" />
    <TextView
        android:id="@+id/meaning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_characters_name"
        android:text="@string/meaning" />
    <TextView
        android:id="@+id/tv_english_meaning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meaning"
        tools:text="up,above,on" />
    <TextView
        android:id="@+id/examples"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_english_meaning"
        android:text="@string/examples" />

    <TextView
        android:id="@+id/tv_hanzi_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/examples"
        tools:text="書在桌子上。" />
    <TextView
        android:id="@+id/tv_pinyin_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hanzi_example"
        tools:text="Shū zài zhuōzi shàng" />
    <TextView
        android:id="@+id/tv_english_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pinyin_example"
        tools:text="The book is on the table." />


</androidx.constraintlayout.widget.ConstraintLayout>